# project-euler-solutions

./: README.md  pyproject.toml
project_euler_solutions/problem1/: main.py
