[tool.poetry]
name = "project-euler-solutions"
version = "0.1.0"
description = ""
authors = ["Alexander Zach <alexander.zach1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
